Refactorizando estructura, refresh tokens, exceptions y dtos