@@ -1,46 +1,68 @@
 package com.devgroup.enterprise_helpdesk_api.security.jwt;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.JwtException;
-import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.*;
+import io.jsonwebtoken.security.Keys;
+import io.jsonwebtoken.security.SignatureException;
+import jakarta.servlet.http.HttpServletRequest;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Component
 public class JwtUtils {
-    private final SecretKey SECRET_KEY = Jwts.SIG.HS256.key().build();
-    private final long EXPIRATION_TIME = 3600000 * 24; // 24 horas
+    private static final Logger log = LoggerFactory.getLogger(JwtUtils.class);
+    private final SecretKey secretKey;
+    private final long expirationMs;
 
-    public String generateJwtToken(Authentication auth) {
+    public JwtUtils(@Value("${jwt.secret}") String secretKey, @Value("${jwt.expiration-ms}") long expirationMs) {
+        this.secretKey = Keys.hmacShaKeyFor(secretKey.getBytes(StandardCharsets.UTF_8));
+        this.expirationMs = expirationMs;
+    }
+
+    public String generateAccessToken(Authentication auth) {
         UserDetails userPrincipal = (UserDetails) auth.getPrincipal();
+        return buildToken(userPrincipal.getUsername(), auth.getAuthorities(), expirationMs);
+    }
 
-//        Collection<? extends GrantedAuthority> authorities = auth.getAuthorities();
-        List<String> authorities = auth.getAuthorities()
-                .stream()
+    public String generateAccessTokenFromUsername(String username, List<String> roles) {
+        List<SimpleGrantedAuthority> authorities = roles.stream()
+                .map(SimpleGrantedAuthority::new)
+                .toList();
+        return buildToken(username, authorities, expirationMs);
+    }
+
+    private String buildToken(String subject, Collection<? extends GrantedAuthority> authorities, long expiration) {
+        List<String> roles = authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .filter(role -> role.startsWith("ROLE_"))
-                .collect(Collectors.toList());
+                .filter(Objects::nonNull)
+                .filter(r -> r.startsWith("ROLE_"))
+                .toList();
 
         return Jwts.builder()
-                .subject(userPrincipal.getUsername())
-                .claim("authorities", authorities) // truco de rendimiento
+                .subject(subject)
+                .claim("authorities", roles)
                 .issuedAt(new Date())
-                .expiration(new Date(System.currentTimeMillis() + EXPIRATION_TIME))
-                .signWith(SECRET_KEY)
+                .expiration(new Date(System.currentTimeMillis() + expiration))
+                .signWith(secretKey)
                 .compact();
     }
 
     public Claims getClaims(String token) {
         return Jwts.parser()
-                .verifyWith(SECRET_KEY)
+                .verifyWith(secretKey)
                 .build()
                 .parseSignedClaims(token)
                 .getPayload();
@@ -50,8 +72,44 @@ public class JwtUtils {
         try {
             getClaims(token);
             return true;
-        } catch (JwtException e) {
-            return false;
+        } catch (ExpiredJwtException e) {
+            log.warn("JWT expirado: {}", e.getMessage());
+        } catch (UnsupportedJwtException e) {
+            log.warn("JWT no soportado: {}", e.getMessage());
+        } catch (MalformedJwtException e) {
+            log.warn("JWT malformado: {}", e.getMessage());
+        } catch (SignatureException e) {
+            log.warn("Firma JWT inválida: {}", e.getMessage());
+        } catch (IllegalArgumentException e) {
+            log.warn("JWT vacío o nulo: {}", e.getMessage());
         }
+        return false;
+    }
+
+    public String extractUsernameFromRequest(HttpServletRequest request) {
+        String header = request.getHeader("Authorization");
+        if (header != null && header.startsWith("Bearer ")) {
+            String token = header.substring(7);
+            if (validateToken(token)) {
+                return getUsernameFromToken(token);
+            }
+        }
+        return null;
+    }
+
+    public String getUsernameFromToken(String token) {
+        return getClaims(token).getSubject();
+    }
+
+    public List<String> getRolesFromToken(String token) {
+        return getClaims(token).get("authorities", List.class);
+    }
+
+    public Date getExpirationFromToken(String token) {
+        return getClaims(token).getExpiration();
+    }
+
+    public long getExpirationMs() {
+        return expirationMs;
     }
 }
